# interval-map

./: CMakeLists.txt  README.md  interval_map.hpp
.github/workflows/: cmake-single-platform.yml
include/: interval_map.hpp
test/: CMakeLists.txt  test.cpp
